# nanogui

./: .azure-pipelines.yml  .gitignore  .travis.yml  CMakeLists.txt
.ci/: azure-pipelines.yml  build.py
.ci/templates/: build_setup.yml  external_packaging.yml  external_packaging_helper.yml
cmake/NanoGUI/: CompileOptions.cmake  Developer.cmake  ExternalDependencies.cmake  Install.cmake  InternalDependencies.cmake  PrimaryTargetSources.cmake  Python.cmake  nanogui-config.cmake.in
cmake/nanogui/: build_type.cmake  deprecated.cmake  options.cmake
include/nanogui/: opengl.h
python/: widget.cpp
src/: example1.cpp
test_package/: CMakeLists.txt
